--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
     <!-- Nav Bar End-->
 
 
-
-
-
     <!--About Me-->
     <section>
         <div class="row">
@@ -117,7 +114,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Acting & Modeling</h5>
                     <p class="card-text">Zach has been a part-time professional model & actor since early 2017. He has
-                        had roles and apperances in advertisments for companies that include: Amazon, Apple, Dell,
+                        had roles and apperances in advertisments for companies such as: Amazon, Apple, Dell,
                         LegalZoom, ConocoPhilips, Ascension, and HEB among others. He had a brief reaccuring role as a
                         "Hero" zombie
                         in "Fear The Walking Dead". </p>
@@ -129,9 +126,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Co-Author</h5>
                     <p class="card-text">In 2018 Zach had the opportunity to work with world renown musician, and
-                        drummer Nate Smith. Zach transcribed over 30 minutes of drumming to create one of the incredible
-                        collection of drum transcriptions ever written. It could be said this is the "hardest" drum book
-                        ever written as well. It has sold all over the world in hard back, ebook, and pdf. </p>
+                        drummer Nate Smith. Zach transcribed over 30 minutes of drumming to create one of the most incredible
+                        collection of drum transcriptions available. It has sold all over the world in hard back, ebook, and pdf. </p>
                 </div>
                 <img src="https://images.squarespace-cdn.com/content/v1/53fdefbae4b03ae33c16fae8/1544638920555-Q8KY2CZ98BS1DP7RMWPZ/ke17ZwdGBToddI8pDm48kHFg3lwAxHvaI5rSscPgwO17gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QHyNOqBUUEtDDsRWrJLTmjJyaSXAwc_BJvYKv4pjNuo0xLMToagxCDIwK1c7MZEgaoDsH5H7CFhkLT6CXjMBk/pocketchange_BOOK_11.14.2018_2_1024x1024%402x.jpg?format=750w"
                     class="card-img-top" alt="Pocket Change Book Cover">
@@ -168,7 +164,7 @@
                                 d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z" />
                             <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z" />
                             <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z" />
-                        </svg> &nbsp; I transcribed every note of this record &nbsp; <svg width="1em" height="1em"
+                        </svg> &nbsp;  I transcribed every note of this record &nbsp; <svg width="1em" height="1em"
                             viewBox="0 0 16 16" class="bi bi-music-note-beamed" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -178,12 +174,12 @@
                         </svg></h3>
                 </div>
 
-                <iframe src="https://open.spotify.com/embed/album/450GzCckh1uA6opnLUB7Nt" width="600" height="425" 
+                <iframe src="https://open.spotify.com/embed/album/450GzCckh1uA6opnLUB7Nt" width="600" height="365"
                     frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
             </div>
-               
-   
+        </section>
+
     </div>
 
 
