--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1UYyQI0CRbvNmUQnuC86onmz4mer0Jhsg/view?usp=sharing" target="_blank">Entertainment Resume</a>
                         <a class="dropdown-item" href="http://www.linkedin.com/in/zachary-yanez">LinkedIn Page</a>
                         <a class="dropdown-item" href="https://zachyanez.github.io/frizzcheck/">FrizzCheck Web App</a>
-                        <a class="dropdown-item" href="https://scastanedamunoz.github.io/Project-1/">Restaurant Finder Web</a>
+                        <a class="dropdown-item" href="https://scastanedamunoz.github.io/Project-1/">Restaurant Finder Web App</a>
                         <a class="dropdown-item" href="https://zachyanez.github.io/Weather-App/"
                             target="_blank">Weather Web App</a>
                       
