--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
                         <a class="dropdown-item" href="https://scastanedamunoz.github.io/Project-1/" target="_blank">Restaurant Finder</a>
                         <a class="dropdown-item" href="https://zach-yanez-note-taker.herokuapp.com/notes"
                             target="_blank">Note Taker</a>
-
-                        <a class="dropdown-item" href="https://zachyanez.github.io/frizzcheck/" target="_blank">FrizzCheck Web App</a>
                         <a class="dropdown-item" href="https://scastanedamunoz.github.io/Project-1/" target="_blank">Restaurant Finder Web App</a>
                         <a class="dropdown-item" href="https://zachyanez.github.io/randompasswordgenerator/"
                             target="_blank">Random Password Generator</a>
@@ -85,7 +83,7 @@
 
             <div class="col-md-5"></div>
             <div class="col-md-2">
-                <h1>About Me</h1>
+                <h1>Welcome</h1>
             </div>
             <div class="col-md-5"></div>
 
@@ -104,7 +102,7 @@
 
     <div class="row row-cols-1 row-cols-md-2">
         <div class="col mb-4">
-            <div class="card shadow p-3 mb-5 bg-white rounded">
+            <div class="card shadow p-3 mb-3 bg-white rounded">
                 <img src="https://mediaslide-us.storage.googleapis.com/brown/pictures/1114/1837/large-1518566005-bd405b3bb4580de53762374b72dc48f2.jpg"
                     class="card-img-top" alt="Zach Drumming">
                 <div class="card-body">
@@ -206,7 +204,7 @@
 
     <!--End Card For Careers-->
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid jumbobackground">
         <div class="container">
           <h1 class="display-4">Languages & Technologies</h1>
           <p class="lead">Learning these languages & programs while studying full-stack web development at the UT School for Professional Development.</p>
