testing on.blur

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
         <!-- Favicon -->
         <link rel="icon" href="/assets/stencil.png"/>
         <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/08eb6219f1.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/08eb6219f1.js" crossorigin="anonymous">
+        window.onfocus = function() { document.title = "Zach Yanez";}
+        window.onblur = function() { document.title = "How are you today?";}
+        </script>
         <!-- CSS Link -->
         <link rel="stylsheet" href="styles.css">
     <title>Zach Yanez</title>
+ 
 </head>
 
 <body>
@@ -59,10 +63,8 @@
                         <a class="dropdown-item" href="https://evening-hamlet-32394.herokuapp.com/" target="_blank">FoodBook</a>
                         <a class="dropdown-item" href="https://zachyanez.github.io/frizzcheck/" target="_blank">FrizzCheck</a>
                         <a class="dropdown-item" href="https://scastanedamunoz.github.io/Project-1/" target="_blank">Restaurant Finder</a>
-                        <a class="dropdown-item" href="https://zach-yanez-note-taker.herokuapp.com/notes"
-                            target="_blank">Note Taker</a>
-                        <a class="dropdown-item" href="https://zachyanez.github.io/randompasswordgenerator/"
-                            target="_blank">Random Password Generator</a>
+                        <a class="dropdown-item" href="https://zach-yanez-note-taker.herokuapp.com/notes" target="_blank">Note Taker</a>
+                        <a class="dropdown-item" href="https://zachyanez.github.io/randompasswordgenerator/"target="_blank">Random Password Generator</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -104,10 +106,10 @@
                     <h5 class="card-title" href="https://www.instagram.com/zach_on_drums/?hl=en">Musician</h5>
                     <p class="card-text ">Since graduating from the DePaul University School of Music in 2015, Zach has worked as a
                         professional freelance musican for bands and theatre companies in the Austin, Texas area and across the country.
-                        Capyac, Dale Watson, The Watters, ZACH Theatre, Lyric Theatre of Oklahoma, Actor's Playhouse, and Zilker Hillside Theatre are just a few of the groups he has performed with.
+                        Capyac, Dale Watson, The Watters, ZACH Theatre, Lyric Theatre of Oklahoma, Actor's Playhouse, and Zilker Hillside Theatre are just a few of the groups he has performed with. Personal highlights include playing music across the country with his friends, performing alongside Broadway professionals, playing Austin City Limits music festival in 2017, and multiple SXSW appearences. 
                     </p>
                 </div>
-            </div>
+            </div> 
         </div>
         <div class="col mb-4">
             <div class="card shadow p-3 mb-5 bg-white rounded">
@@ -117,8 +119,7 @@
                     <h5 class="card-title" href="http://www.brownagency.co/commercial/men/1114-zach-yanez/">Acting & Modeling</h5>
                     <p class="card-text">Zach has been a part-time professional model & actor since early 2017. He is currently signed to <a href="http://www.brownagency.co/commercial/men/1114-zach-yanez/"
                         target="_blank">The Brown Agency</a>, a top modeling agency based in Austin. He has
-                        had roles for: Amazon, Apple, Dell,
-                        LegalZoom, ConocoPhilips, Ascension, and even an H-E-B Superbowl commercial. He had a brief reaccuring role as a "Hero" zombie in the AMC show "Fear The Walking Dead". </p>
+                        had roles for: Amazon, Apple, Dell, LegalZoom, ConocoPhilips, Ascension, Kevita, Car2Go, and even an H-E-B Superbowl commercial in 2018. He had a brief reaccuring role as a "Hero" zombie in the AMC show "Fear The Walking Dead". </p>
                 </div>
             </div>
         </div>
@@ -175,7 +176,7 @@
           <h1 class="display-4">Languages & Technologies</h1>
           <p class="lead">Learning these languages & programs while studying full-stack web development at the UT School for Professional Development.</p>
           <div class="row">
-          <p> <i class="fab fa-js-square"></i> Javascript &nbsp; • &nbsp; <i class="fas fa-dollar-sign"></i> JQuery  &nbsp;•  &nbsp;<i class="fab fa-html5"></i> HTML  &nbsp;• &nbsp; <i class="fab fa-css3-alt"></i> CSS  &nbsp;•  &nbsp;<i class="fab fa-node-js"></i> Node.js  &nbsp;• &nbsp; <i class="fas fa-cloud"></i> MySQL  &nbsp;• &nbsp; <i class="fas fa-database"></i> MongoDB  &nbsp;• &nbsp; <i class="fas fa-code"></i> VScode &nbsp; • &nbsp; <i class="fas fa-laptop-code"></i> Ajax  &nbsp;• &nbsp; <i class="fas fa-file-download"></i> NPM  &nbsp; • &nbsp; <i class="fab fa-git-square"></i> Git  &nbsp;•  &nbsp;</p><p><i class="far fa-folder-open"></i> Bash/Unix </p>  
+          <p> <i class="fab fa-js-square"></i> Javascript &nbsp; • &nbsp; <i class="fas fa-dollar-sign"></i> JQuery  &nbsp;•  &nbsp;<i class="fab fa-html5"></i> HTML  &nbsp;• &nbsp; <i class="fab fa-css3-alt"></i> CSS  &nbsp;•  &nbsp;<i class="fab fa-node-js"></i> Node.js  &nbsp;• &nbsp; <i class="fas fa-cloud"></i> MySQL  &nbsp;• &nbsp; <i class="fas fa-database"></i> MongoDB  &nbsp;• &nbsp; <i class="fas fa-code"></i> VScode &nbsp; • &nbsp; <i class="fas fa-laptop-code"></i> Ajax  &nbsp;• &nbsp; <i class="fas fa-file-download"></i> NPM  &nbsp; • &nbsp; <i class="fab fa-git-square"></i> Git  &nbsp;•  &nbsp;</p><p><i class="far fa-folder-open"></i> Bash/Unix &nbsp;• &nbsp;<i class="fas fa-hourglass-half"></i> IndexedDB &nbsp; • &nbsp; </p>  
         </div>
         </div>
       </div>
