onfocus & onblur fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link src="https://kit.fontawesome.com/08eb6219f1.js" crossorigin="anonymous">
 
         <script>
-        window.onfocus = function() { document.title = "Zach Yanez";}
+        window.onfocus = function() { document.title = "Zach Yanez ✌🏽";}
         window.onblur = function() { document.title = "How are you today?";}
         </script>
         <!-- CSS Link -->
