--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
                             target="_blank">Music</a>
                         <a class="dropdown-item" href="http://www.brownagency.co/commercial/men/1114-zach-yanez/"
                             target="_blank">Acting & Modeling </a>
-                            <a class="dropdown-item" target="_blank" href="http://www.linkedin.com/in/zachary-yanez">LinkedIn</a>
-                        <a class="dropdown-item" href="http://www.natesmithmusic.com/products/pocketchangephysicalbook"
-                            target="_blank">Pocket Change Transcription</a>
-                        <a class="dropdown-item"
+                            <a class="dropdown-item"
                             href="https://www.westlakelessons.com/zachary-yanez#:~:text=Zach%20Yanez%20is%20a%20highly,classical%20percussion%20and%20drum%20set."
                             target="_blank">Teaching Artist</a>
+                            <a class="dropdown-item" target="_blank" href="http://www.linkedin.com/in/zachary-yanez">LinkedIn</a>
+                            <a class="dropdown-item"
+                            href="https://github.com/ZachYanez"
+                            target="_blank">Github</a>
+                        <a class="dropdown-item" href="http://www.natesmithmusic.com/products/pocketchangephysicalbook"
+                            target="_blank">Pocket Change Transcription</a>
                             <a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1UYyQI0CRbvNmUQnuC86onmz4mer0Jhsg/view?usp=sharing" target="_blank">Entertainment Resume</a>
                         
                     </div>
@@ -154,19 +157,9 @@
                         class="card-img-top" alt="Random Piano Picture">
                 </div>
             </div>
-            <div class="col-md-12 shadow p-3 mb-5 bg-white rounded" style="margin-bottom: 5%">
-                <div>
-                    <h3> &nbsp; &nbsp;  &nbsp; Here is the recording of Pocket Change &nbsp; <svg width="1em" height="1em"
-                            viewBox="0 0 16 16" class="bi bi-music-note-beamed" fill="currentColor"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z" />
-                            <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z" />
-                            <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z" />
-                        </svg></h3>
-                </div>
+            <div class="card col-mb-4 shadow p-3 mb-5 bg-white rounded spotify-embed" style="margin-bottom: 5%">
 
-                <iframe src="https://open.spotify.com/embed/album/450GzCckh1uA6opnLUB7Nt" width="600" height="329"
+                <iframe src="https://open.spotify.com/embed/album/450GzCckh1uA6opnLUB7Nt" width= "100%" height="329"
                     frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
             </div>
