font awesome fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Favicon -->
         <link rel="icon" href="/assets/stencil.png"/>
         <!-- Font Awesome -->
-        <link src="https://kit.fontawesome.com/08eb6219f1.js" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/08eb6219f1.js" crossorigin="anonymous"></script>
 
         <script>
         window.onfocus = function() { document.title = "Zach Yanez ✌🏽";}
@@ -174,7 +174,7 @@
           <h1 class="display-4">Languages & Technologies</h1>
           <p class="lead">Learning these languages & programs while studying full-stack web development at the UT School for Professional Development.</p>
           <div class="row">
-          <p> <i class="fab fa-js-square"></i> Javascript &nbsp; • &nbsp; <i class="fas fa-dollar-sign"></i> JQuery  &nbsp;•  &nbsp;<i class="fab fa-html5"></i> HTML  &nbsp;• &nbsp; <i class="fab fa-css3-alt"></i> CSS  &nbsp;•  &nbsp;<i class="fab fa-node-js"></i> Node.js  &nbsp;• &nbsp; <i class="fas fa-cloud"></i> MySQL  &nbsp;• &nbsp; <i class="fas fa-database"></i> MongoDB  &nbsp;• &nbsp; <i class="fas fa-code"></i> VScode &nbsp; • &nbsp; <i class="fas fa-laptop-code"></i> Ajax  &nbsp;• &nbsp; <i class="fas fa-file-download"></i> NPM  &nbsp; • &nbsp; <i class="fab fa-git-square"></i> Git  &nbsp;•  &nbsp;</p><p><i class="far fa-folder-open"></i> Bash/Unix &nbsp;• &nbsp;<i class="fas fa-hourglass-half"></i> IndexedDB &nbsp; • &nbsp; </p>  
+          <p> <i class="fab fa-js-square"></i> Javascript &nbsp; • &nbsp; <i class="fas fa-dollar-sign"></i> JQuery  &nbsp;•  &nbsp;<i class="fab fa-html5"></i> HTML  &nbsp;• &nbsp; <i class="fab fa-css3-alt"></i> CSS  &nbsp;•  &nbsp;<i class="fab fa-node-js"></i> Node.js  &nbsp;• &nbsp;<i class="fab fa-react"></i> React &nbsp; • &nbsp; <i class="fas fa-cloud"></i> MySQL  &nbsp;• &nbsp; <i class="fas fa-database"></i> MongoDB  &nbsp;• &nbsp; <i class="fas fa-code"></i> VScode &nbsp; • &nbsp; <i class="fas fa-laptop-code"></i> Ajax  &nbsp;• &nbsp; <i class="fas fa-file-download"></i> NPM  &nbsp; • &nbsp; <i class="fab fa-git-square"></i> Git  &nbsp;•  &nbsp;</p><p><i class="far fa-folder-open"></i> Bash/Unix &nbsp;• &nbsp;<i class="fas fa-hourglass-half"></i> IndexedDB &nbsp; • &nbsp; </p>  
         </div>
         </div>
       </div>
