adding phone and email

--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
             <div class="col-md-5"></div>
             <div class="col-md-2">
                 <h1>Welcome</h1>
+                <p class="phone">(512)-740-3455</p>
+                <p class="email">zachyanez@gmail.com</p>
             </div>
             <div class="col-md-5"></div>
         </div>
     </section>
 
     <!--About Me End-->
-
 
     <!--Cards for Careers-->
 
