added phone and email

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         window.onblur = function() { document.title = "How are you today?";}
         </script>
         <!-- CSS Link -->
-        <link rel="stylsheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
     
  
 </head>
